# rust-chatbot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: default.toml
src/: main.rs
