[package]
name = "rust-chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.31", features = ["full"] }
async-openai = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
dotenv = "0.15"
futures = "0.3"
colored = "2.0"
ferris-says = "0.3"
